# stremio-horizon-app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check-upstream-web.yml  release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chromecast.rs  config.rs  debug.rs  lib.rs  main.rs  updater.rs
src-tauri/tests/: updater_integration.rs
