[package]
name = "stremio-horizon-app"
version = "0.1.0"
description = "Desktop app for Stremio Horizon"
authors = ["Aqu1tain"]
edition = "2021"

[lib]
name = "stremio_horizon_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-cors-fetch = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
