[package]
name = "stremio-horizon-app"
version = "0.2.2"
description = "Desktop app for Stremio Horizon"
authors = ["Aqu1tain"]
edition = "2021"

[lib]
name = "stremio_horizon_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ureq = "2"
native-tls = "0.2"
mdns-sd = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }
